Refactor Makefile for test and bonus targets

--- a/Makefiles/get_next_line/Makefile
+++ b/Makefiles/get_next_line/Makefile
@@ -10,9 +10,11 @@ endif
 ifdef BONUS_FLAG
 	SRC_FILES = get_next_line_bonus.c get_next_line_utils_bonus.c
 	HEADER = get_next_line_bonus.h
+	TEST_NAME = bonus
 else
 	SRC_FILES = get_next_line.c get_next_line_utils.c
 	HEADER = get_next_line.h
+	TEST_NAME = basic
 endif
 
 SRC = $(SRC_FILES) main.c
@@ -26,15 +28,14 @@ ifndef FD_NAME
 FD_NAME = test.txt
 endif
 
-basic: $(NAME) $(FD_NAME)
-	@make clean
-	@echo "\nBasic test for $(NAME):"
+test: $(NAME) $(FD_NAME) clean test.txt
+	@echo "\n$(NAME)'s $(TEST_NAME) test"
 	@echo "********************"
 	@./$(NAME)
 	@echo "********************"
-	@echo "\n"
+	@echo ""
 
-all: $(NAME) $(FD_NAME)
+all: test
 
 $(NAME): $(OBJ)
 	$(CC) $(CFLAGS) -o $(NAME) $(OBJ)
@@ -58,7 +59,6 @@ ifdef BONUS_FLAG
 	@echo '		perror("Error opening file");' >> main.c
 	@echo '		return (1);' >> main.c
 	@echo '	}' >> main.c
-	@echo '	printf("--- Bonus Test ---\\n");' >> main.c
 	@echo '	line = get_next_line(fd1); if (line) { printf("fd1: %s", line); free(line); }' >> main.c
 	@echo '	line = get_next_line(fd2); if (line) { printf("fd2: %s", line); free(line); }' >> main.c
 	@echo '	line = get_next_line(fd3); if (line) { printf("fd3: %s", line); free(line); }' >> main.c
@@ -100,7 +100,7 @@ ifdef BONUS_FLAG
 	@echo 'File 2 Line 1' > test2.txt
 	@echo 'File 2 Line 2' >> test2.txt
 	@echo 'File 3 Line 1' > test3.txt
-	@touch test.txt
+	@echo 'File 3 Line 2' >> test3.txt
 else
 	@echo 'Hello World' > test.txt
 	@echo 'This is a test' >> test.txt
@@ -109,8 +109,7 @@ else
 	@echo 'End of file' >> test.txt
 endif
 
-bonus:
-	@make clean
+bonus: fclean
 	@$(MAKE) BONUS_FLAG=1
 
 clean:
@@ -121,7 +120,9 @@ fclean: clean
 
 re: fclean all
 
+reBonus: fclean all bonus
+
 %.o: %.c $(HEADER)
 	$(CC) $(CFLAGS) -c $< -o $@
 
-.PHONY: all bonus clean fclean re basic
+.PHONY: all bonus clean fclean re reBonus test
